--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="container">
+    <p>&copy; {{ currentYear }} My Blog. All rights reserved.</p>
+  </div>
+</footer>
