--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,1 +1,16 @@
-<p>header works!</p>
+<header class="header">
+  <div class="container">
+    <a routerLink="/" class="site-logo">
+        <h1>My Blog</h1>
+    </a>
+    <nav class="main-nav">
+      <ul>
+        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/about">About</a></li>
+        <li><a routerLink="/blog">Blog</a></li>
+        <li><a routerLink="/portfolio">Portfolio</a></li>
+        <li><a routerLink="/contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
