Simplify global CSS and limit the width

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,7 @@
 <app-header />
 <main>
-  <router-outlet />
+  <div class="main-container">
+    <router-outlet />
+  </div>
 </main>
 <app-footer />
