--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,8 +1,8 @@
 <header class="header">
   <div class="container">
-    <a routerLink="/" class="site-logo">
-        <h1>My Blog</h1>
-    </a>
+    <h1 class="site-logo">
+      <a routerLink="/">My Blog</a>
+    </h1>
     <nav class="main-nav">
       <ul>
         <li><a routerLink="/">Home</a></li>
